Correct blinking cursor size on mobile

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -57,7 +57,7 @@ h4 {
 
 .blinking-cursor {
     font-weight: 100;
-    font-size: 30px;
+    font-size: 2rem;
     color: #2E3D48;
     -webkit-animation: 1s blink step-end infinite;
     -moz-animation: 1s blink step-end infinite;
@@ -121,6 +121,9 @@ h4 {
   }
   h4 {
     font-size: 1.3rem;
+  }
+  .blinking-cursor {
+    font-size: 1.1rem;
   }
 }
 
